--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,24 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.park.quest"
         minSdk 28
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.3"
     }
 
     buildTypes {
@@ -33,9 +41,40 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+
+    // Compose
+    def composeBom = platform('androidx.compose:compose-bom:2023.06.01')
+    implementation composeBom
+    androidTestImplementation composeBom
+
+    implementation 'androidx.compose.material3:material3'
+
+    // Android Studio Preview support
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.7.2'
+    // Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+    // Integration with LiveData
+    implementation 'androidx.compose.runtime:runtime-livedata'
+    // Integration with RxJava
+    implementation 'androidx.compose.runtime:runtime-rxjava2'
+    // Painter
+    implementation "com.google.accompanist:accompanist-drawablepainter:0.28.0"
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.6.0"
+    // Navigation Animations
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.29.2-rc"
+    // Gestures
+    implementation "androidx.compose.foundation:foundation:1.4.3"
+    // End of Compose
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
