updates: - hilt added - module / providers created - app level shared view model created - sample data added to populate db - room integrated - repositories added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.dagger.hilt.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -12,6 +14,12 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas")
+            }
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -44,6 +52,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation "androidx.room:room-runtime:2.5.2"
+    implementation "androidx.room:room-ktx:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
+
 
     // Compose
     def composeBom = platform('androidx.compose:compose-bom:2023.06.01')
@@ -74,6 +86,13 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:1.4.3"
     // End of Compose
 
+    // Gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // Hilt
+    implementation 'com.google.dagger:hilt-android:2.45'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    kapt 'com.google.dagger:hilt-compiler:2.45'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
