--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,10 @@ dependencies {
     // Gson
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    // Coil
+    implementation("io.coil-kt:coil:2.4.0")
+    implementation("io.coil-kt:coil-compose:2.4.0")
+
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.45'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
